  show statistics and query plan for an SQL query.
  Thanks to Martin Weissenborn for the Cache specific requirements

New SQL editor function to delete the current SQL statement.
  Accessible by short cut Ctrl+Shift+Del, tools popup, right mouse menu.
  Note: Corresponding functions to copy (Ctrl+Shift+x) and cut (Ctrl+Shift+x) already exist.


Bug fixes:

Saved Sessions: Loading internally saved file failed on MS Windows.

SQL editor: Function "Go to last edit location" (ctrl+shift+backspace) didn't work
  when the last edit was a paste action.

Corrected layout for temporal data types (TIMESTAMP, DATE, TIME) configuration UIs.
  See menu File --> Global Preferences --> tab Data Type Controls --> sections Timestamp, Date, Time

Logs viewer raised StringIndexOutOfBoundsException if not all log levels where checked.
  See menu Windows --> View SQuirreL logs or button in status bar.

Logging (after dropping dependency on log4j): Sometimes exceptions weren't logged with stacktrace.

#1497 When table-editing columns of type NUMERIC OR DECIMAL SQuirreL tried to validate if the edited number's
  scale and precision match the column definition. This was dropped.
  SQuirreL now lets the database decide if the edited value can be stored.

Logging (after dropping dependency on log4j): With log level DEBUG (i.e. command line parameter --log-level DEBUG)
  some debug logs weren't written to SQuirreL's log file, see <userDir>/logs/.

Fixed: Depending on previous search string lengths the SQL editors search(Ctrl+f) and replace(Ctrl+h) dialogs
  were to small to be GUI-layouted correctly.

SQL editor and tab focus incorrectly changed when SQuirreL was used in multiple windows and with multiple Sessions.

Hibernate Plugin: Avoided possible hang on connection close
  This uses the meta data loading timeout,
  see menu File --> New Session Properties --> tab SQL --> section "Meta data loading"
